[tool.poetry]
name = "alien-invasion"
version = "0.1.0"
description = ""
authors = ["Amena Mabrouk <mabrouk.amena@gmail.com>"]
readme = "README.md"
packages = [{include = "alien_invasion"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
